--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.22"
+attrs = "^19.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
