--- a/garpy/resources/default_config.yaml
+++ b/garpy/resources/default_config.yaml
@@ -2,4 +2,5 @@ garpy:
   backup-dir: 'activities'
   endpoints:
     SSO_LOGIN_URL: "https://sso.garmin.com/sso/signin"
-    ACTIVITY_SUMMARY: "https://connect.garmin.com/modern/proxy/activity-service/activity/{id}"
+    JSON_ACTIVITY_SUMMARY: "https://connect.garmin.com/modern/proxy/activity-service/activity/{id}"
+    JSON_ACTIVITY_DETAILS: "https://connect.garmin.com/modern/proxy/activity-service/activity/{id}/details"
