--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,11 @@ python = "^3.7"
 requests = "^2.22"
 attrs = "^19.1"
 pendulum = "^2.0"
+PyYAML = "^5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
+pytest-cov = "^2.7"
 
 [build-system]
 requires = ["poetry>=0.12"]
