--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "garpy"
 version = "0.1.0"
 description = "Python client for downloading activities from Garmin Connect"
 authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
-license = "Apache-2.0"
+license = "MIT"
 readme = "README.md"
 
 
