--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
 install:
 - poetry install
 script:
-  - poetry run pytest tests/
+- poetry run pytest --cov-report term-missing --cov=garpy tests/
 after_success:
-  - coveralls
+- coveralls
