--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ PyYAML = "^5.1"
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
 pytest-cov = "^2.7"
+coveralls = "^1.8"
 
 [build-system]
 requires = ["poetry>=0.12"]
