--- a/garpy/resources/default_config.yaml
+++ b/garpy/resources/default_config.yaml
@@ -26,3 +26,9 @@ activities:
     tolerate:
       - 404
       - 500
+  mkl:
+    endpoint: "https://connect.garmin.com/modern/proxy/download-service/export/kml/activity/{id}"
+    suffix: ".mkl"
+    tolerate:
+      - 404
+      - 204
