Add homepage to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Python client for downloading activities from Garmin Connect"
 authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
 license = "MIT"
 readme = "README.rst"
+homepage = "https://github.com/felipeam86/garpy"
 
 [tool.poetry.scripts]
 garpy = "garpy.cli:main"
