Add client method to get wellness data

--- a/garpy/resources/default_config.yaml
+++ b/garpy/resources/default_config.yaml
@@ -32,3 +32,7 @@ activities:
     tolerate:
       - 404
       - 204
+wellness:
+  endpoint: "https://connect.garmin.com/modern/proxy/download-service/files/wellness/{date}"
+  tolerate:
+    - 404
