--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pendulum = "^2.0"
 PyYAML = "^5.1"
 click = ">=7,<8"
 tqdm = "^4.36"
+cloudscraper = "^1.2.58"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
