--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,11 @@ tqdm = "^4.36"
 cloudscraper = "^1.2.58"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.0"
+pytest = "^6.2.5"
 pytest-cov = "^2.7"
 coveralls = "^3.0"
+black = "^21.12b0"
+isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
