--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ cloudscraper = "^1.2.58"
 pytest = "^6.2.5"
 pytest-cov = "^3.0"
 coveralls = "^3.0"
-black = "^21.12b0"
-isort = "^5.10.1"
+black = "^22.12.0"
+isort = "^5.11.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
