--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ PyYAML = ">=5.1,<7.0"
 click = ">=7,<9"
 tqdm = "^4.36"
 cloudscraper = "^1.2.58"
+garpyclient = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
